--- a/static/global.css
+++ b/static/global.css
@@ -17,6 +17,7 @@ body {
   --lightgreen: #b4e197;
   --green: #83bd75;
   --hgreen: #4e944f;
+  text-decoration: none;
 
   --textLink: var(--black);
   --textNormal: var(--black);
@@ -105,4 +106,16 @@ a.squiggly:hover {
 
 a.title {
   color: var(--green);
+  font-size: 45px;
 }
+
+a.title:hover {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Squiggle-svg' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.st0{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='green' stroke-width='1' class='st0' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+    background-position: 0 60px;
+    background-size: auto 3px;
+    background-repeat: repeat-x;
+    padding-bottom: 0.15em;
+    background-clip: initial;
+    -webkit-text-fill-color: initial;
+    box-decoration-break: initial;
+  }
